--- a/app/src/main/res/layout/activity_settings_page.xml
+++ b/app/src/main/res/layout/activity_settings_page.xml
@@ -6,7 +6,7 @@
     android:background="@drawable/background3"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SettingsPage">
+    tools:context="com.example.menu.SettingsPage">
 
     <Button
         android:id="@+id/return_button_settingsPage"
