--- a/app/src/main/res/layout/activity_achievements_page.xml
+++ b/app/src/main/res/layout/activity_achievements_page.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background3"
-    tools:context=".AchievementsPage">
+    tools:context="com.example.menu.AchievementsPage">
 
     <Button
         android:id="@+id/achievementsPage_back_button"
