--- a/app/src/main/res/layout/activity_first_page.xml
+++ b/app/src/main/res/layout/activity_first_page.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background3"
-    tools:context=".FirstPage">
+    tools:context="com.example.menu.FirstPage">
 
     <Button
         android:id="@+id/settings_button_main"
