--- a/app/src/main/res/layout/activity_level7_page.xml
+++ b/app/src/main/res/layout/activity_level7_page.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/background3"
     android:orientation="vertical"
-    tools:context=".Level7Page">
+    tools:context="com.example.educational.Level7Page">
 
     <Button
         android:id="@+id/settings"
