--- a/app/src/main/res/layout/activity_play_page.xml
+++ b/app/src/main/res/layout/activity_play_page.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background3"
-    tools:context=".PlayPage">
+    tools:context="com.example.menu.PlayPage">
 
 
     <Button
