--- a/app/src/main/res/layout/activity_level3_page.xml
+++ b/app/src/main/res/layout/activity_level3_page.xml
@@ -103,7 +103,7 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=" 1"
+            android:text="@string/_1"
             android:textSize="30sp"
             android:textStyle="bold"
             app:layout_column="3"
