--- a/app/src/main/res/layout/activity_instructions_page.xml
+++ b/app/src/main/res/layout/activity_instructions_page.xml
@@ -50,79 +50,165 @@
 
     <ImageView
         android:id="@+id/logoo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="258dp"
+        android:layout_height="47dp"
         android:contentDescription="@string/logo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.132"
+        app:layout_constraintVertical_bias="0.045"
         app:srcCompat="@drawable/logo" />
 
-    <TextView
-        android:id="@+id/userName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.05"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/avatarH"
-        android:layout_width="65dp"
-        android:layout_height="53dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.05"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.35" />
-
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="end"
+        android:layout_width="650dp"
+        android:layout_height="300dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="32dp"
+        android:background="@drawable/shadow_instructions_panel"
+        android:gravity="center|top"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/userName"
+        app:layout_constraintHorizontal_bias="0.50"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/logoo">
 
-        <TextView
-            android:id="@+id/textView2"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="The aim of FunAlgo is to teach fundamental of algorithm in a fun way.\n\n"
-            android:textColor="#000000"
-            android:textColorHighlight="#000000"
-            android:textColorHint="#000000"
-            android:textColorLink="#000000" />
+            android:layout_height="36dp"
+            android:layout_marginTop="25dp"
+            android:gravity="center|center_horizontal">
 
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Educational Mode : The user tries to reach the gift in every level with harder algorithms.\n\n"
-            android:textColor="#000000" />
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="155dp"
+                android:layout_height="match_parent"
+                android:layout_marginRight="25dp"
+                android:gravity="center"
+                android:text="EDUCATIONAL MODE"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+                android:textSize="15sp" />
 
-        <TextView
-            android:id="@+id/textView4"
+            <TextView
+                android:id="@+id/textView12"
+                android:layout_width="155dp"
+                android:layout_height="match_parent"
+                android:layout_marginRight="25dp"
+                android:gravity="center"
+                android:text="CREATIVE MODE"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+                android:textSize="15sp" />
+
+            <TextView
+                android:id="@+id/textView13"
+                android:layout_width="155dp"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="ACHIEVEMENTS"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+                android:textSize="15sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:gravity="center_horizontal|top"
+            android:orientation="horizontal"
+            android:scrollbarDefaultDelayBeforeFade="400"
+            android:scrollbarFadeDuration="250">
+
+            <ImageView
+                android:id="@+id/imageView4"
+                android:layout_width="155dp"
+                android:layout_height="85dp"
+                android:layout_marginRight="25dp"
+                android:contentDescription="educational"
+                app:srcCompat="@drawable/educational" />
+
+            <ImageView
+                android:id="@+id/imageView5"
+                android:layout_width="155dp"
+                android:layout_height="85dp"
+                android:layout_marginRight="25dp"
+                android:contentDescription="creative"
+                app:srcCompat="@drawable/creative" />
+
+            <ImageView
+                android:id="@+id/imageView6"
+                android:layout_width="155dp"
+                android:layout_height="85dp"
+                android:contentDescription="achievements"
+                app:srcCompat="@drawable/achievements" />
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Creative Mode : The user tries to draw shapes in every level with harder algorithms. \n\n"
-            android:textColor="#000000" />
+            android:layout_marginTop="10dp"
+            android:gravity="center|top">
+
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="155dp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="20dp"
+                android:text=" - Find the best algorithm to reach the target"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+                android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="155dp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="20dp"
+                android:text=" - Draw shapes with free work space"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+                android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/textView14"
+                android:layout_width="155dp"
+                android:layout_height="wrap_content"
+                android:text=" - Learn your success in levels"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+                android:textSize="12sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginTop="5dp"
+            android:gravity="top">
+
+            <ImageView
+                android:id="@+id/imageView9"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="7dp"
+                android:layout_marginEnd="3dp"
+                app:srcCompat="@drawable/info" />
+
+            <TextView
+                android:id="@+id/textView10"
+                android:layout_width="139dp"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="35dp"
+                android:text=" - Learn how to pass the  level"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+                android:textSize="12sp" />
+
+        </LinearLayout>
     </LinearLayout>
 
     <androidx.constraintlayout.widget.Barrier
         android:id="@+id/barrier"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:barrierDirection="left" />
+        app:barrierDirection="top"
+        tools:layout_editor_absoluteX="731dp" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
