--- a/app/src/main/res/layout/activity_instructions_page.xml
+++ b/app/src/main/res/layout/activity_instructions_page.xml
@@ -61,11 +61,11 @@
         app:srcCompat="@drawable/logo" />
 
     <LinearLayout
-        android:layout_width="650dp"
-        android:layout_height="300dp"
+        android:layout_width="610dp"
+        android:layout_height="260dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="32dp"
-        android:background="@drawable/shadow_instructions_panel"
+        android:background="@drawable/layout2_design"
         android:gravity="center|top"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -88,7 +88,8 @@
                 android:gravity="center"
                 android:text="EDUCATIONAL MODE"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-                android:textSize="15sp" />
+                android:textSize="15sp"
+                android:background="@drawable/button_design"/>
 
             <TextView
                 android:id="@+id/textView12"
@@ -98,7 +99,8 @@
                 android:gravity="center"
                 android:text="CREATIVE MODE"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-                android:textSize="15sp" />
+                android:textSize="15sp"
+                android:background="@drawable/button_design"/>
 
             <TextView
                 android:id="@+id/textView13"
@@ -107,12 +109,14 @@
                 android:gravity="center"
                 android:text="ACHIEVEMENTS"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-                android:textSize="15sp" />
+                android:textSize="15sp"
+                android:background="@drawable/button_design"/>
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="80dp"
+            android:layout_marginTop="3dp"
             android:gravity="center_horizontal|top"
             android:orientation="horizontal"
             android:scrollbarDefaultDelayBeforeFade="400"
