--- a/app/src/main/res/layout/activity_settings_page.xml
+++ b/app/src/main/res/layout/activity_settings_page.xml
@@ -56,12 +56,15 @@
         android:layout_width="167dp"
         android:layout_height="92dp"
         android:layout_marginStart="260dp"
-        android:layout_marginLeft="260dp"
-        android:layout_marginTop="41dp"
+        android:layout_marginTop="36dp"
         android:background="@drawable/wallpaper8"
+        android:text="@string/musics_button"
+        android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/themes_button_settingsPage" />
-        android:layout_marginBottom="256dp"
+        app:layout_constraintTop_toBottomOf="@+id/themes_button_settingsPage"
+        tools:text="@string/musics_button" />
+    android:layout_marginBottom="256dp"
         android:background="@drawable/wallpaper8"
         android:text="@string/musics_button"
         android:textSize="20sp"
