--- a/app/src/main/res/layout/activity_level1_page.xml
+++ b/app/src/main/res/layout/activity_level1_page.xml
@@ -247,7 +247,7 @@
             android:id="@+id/bee"
             android:layout_width="75dp"
             android:layout_height="70dp"
-            android:layout_marginTop="70dp"
+            android:layout_marginTop="184px"
             android:contentDescription="@string/bee"
             android:rotation="90"
             app:srcCompat="@drawable/bee" />
