--- a/app/src/main/res/layout/activity_level1_page.xml
+++ b/app/src/main/res/layout/activity_level1_page.xml
@@ -233,7 +233,7 @@
 
     <FrameLayout
         android:id="@+id/frame"
-        android:layout_width="300dp"
+        android:layout_width="800px"
         android:layout_height="280dp"
         android:layout_marginStart="10dp"
         android:layout_marginBottom="6dp"
