--- a/app/src/main/res/layout/activity_level1_page.xml
+++ b/app/src/main/res/layout/activity_level1_page.xml
@@ -234,7 +234,7 @@
     <FrameLayout
         android:id="@+id/frame"
         android:layout_width="800px"
-        android:layout_height="280dp"
+        android:layout_height="746px"
         android:layout_marginStart="10dp"
         android:layout_marginBottom="6dp"
         android:background="@drawable/firstmap"
