--- a/app/src/main/res/layout/activity_level1_page.xml
+++ b/app/src/main/res/layout/activity_level1_page.xml
@@ -256,8 +256,8 @@
             android:id="@+id/honey"
             android:layout_width="75dp"
             android:layout_height="70dp"
-            android:layout_marginStart="225dp"
-            android:layout_marginTop="70dp"
+            android:layout_marginStart="600px"
+            android:layout_marginTop="184px"
             android:contentDescription="@string/honey"
             app:layout_constraintStart_toStartOf="parent"
             app:srcCompat="@drawable/honeycombs" />
