--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="colorWhite">#FFFFFF</color>
     <color name="color">#E30D34</color>
     <color name="background">#2979FF</color>
+    <color name="holo_blue_bright">#FF00DDFF</color>
+    <color name="holo_blue_dark">#FF0099CC</color>
 </resources>
