--- a/app/src/main/res/layout/activity_musics_page.xml
+++ b/app/src/main/res/layout/activity_musics_page.xml
@@ -114,6 +114,7 @@
         android:layout_marginEnd="32dp"
         android:background="#4C78E8"
         android:text="@string/music2_button"
+        android:textColor="#191717"
         android:textColorLink="#000000"
         app:layout_constraintBottom_toTopOf="@+id/guideline5"
         app:layout_constraintEnd_toEndOf="parent"
@@ -130,6 +131,7 @@
         android:layout_marginEnd="32dp"
         android:background="#4C78E8"
         android:text="@string/music3_button"
+        android:textColor="#151414"
         app:layout_constraintBottom_toTopOf="@+id/guideline6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -145,6 +147,7 @@
         android:layout_marginEnd="32dp"
         android:background="#4C78E8"
         android:text="@string/music4_button"
+        android:textColor="#100F0F"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
