--- a/app/src/main/res/layout/activity_first_page.xml
+++ b/app/src/main/res/layout/activity_first_page.xml
@@ -84,6 +84,7 @@
         android:ems="10"
         android:gravity="center"
         android:hint="@string/nickname"
+        android:textColor="#121111"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -104,6 +105,7 @@
         android:layout_marginBottom="70dp"
         android:background="@drawable/button_design"
         android:text="@string/start"
+        android:textColor="#121111"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.112"
