--- a/app/src/main/res/layout/activity_level5_page.xml
+++ b/app/src/main/res/layout/activity_level5_page.xml
@@ -185,6 +185,7 @@
                     android:layout_height="40dp"
                     android:background="@drawable/button_design"
                     android:text="@string/go_forward"
+                    android:textColor="#121111"
                     android:textSize="10sp" />
 
                 <Button
@@ -193,6 +194,7 @@
                     android:layout_height="40dp"
                     android:background="@drawable/button_design"
                     android:text="@string/turn_left"
+                    android:textColor="#121111"
                     android:textSize="10sp" />
 
                 <Button
@@ -201,6 +203,7 @@
                     android:layout_height="40dp"
                     android:background="@drawable/button_design"
                     android:text="@string/turn_right"
+                    android:textColor="#121111"
                     android:textSize="10sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -211,6 +214,7 @@
                     android:layout_height="40dp"
                     android:background="@drawable/button_design"
                     android:text="get nectar"
+                    android:textColor="#121111"
                     android:textSize="10sp" />
 
             </LinearLayout>
@@ -254,6 +258,7 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:background="@drawable/button_design"
+            android:textColor="#121111"
             android:text="@string/apply" />
 
         <Button
@@ -261,6 +266,7 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:background="@drawable/button_design"
+            android:textColor="#121111"
             android:text="@string/reset" />
 
     </LinearLayout>
@@ -307,6 +313,7 @@
         android:background="@drawable/button_design"
         android:gravity="center"
         android:text="@string/Movements"
+        android:textColor="#121111"
         app:layout_constraintBottom_toTopOf="@id/guideline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.436"
