--- a/app/src/main/res/layout/activity_level7_page.xml
+++ b/app/src/main/res/layout/activity_level7_page.xml
@@ -175,6 +175,7 @@
                     android:layout_height="40dp"
                     android:background="@drawable/button_design"
                     android:text="@string/go_forward"
+                    android:textColor="#121111"
                     android:textSize="10sp" />
 
                 <Button
@@ -183,6 +184,7 @@
                     android:layout_height="40dp"
                     android:background="@drawable/button_design"
                     android:text="@string/turn_left"
+                    android:textColor="#121111"
                     android:textSize="10sp" />
 
                 <Button
@@ -191,6 +193,7 @@
                     android:layout_height="40dp"
                     android:background="@drawable/button_design"
                     android:text="@string/turn_right"
+                    android:textColor="#121111"
                     android:textSize="10sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -201,6 +204,7 @@
                     android:layout_height="40dp"
                     android:background="@drawable/button_design"
                     android:text="@string/get_key"
+                    android:textColor="#121111"
                     android:textSize="10sp" />
 
             </LinearLayout>
@@ -244,6 +248,7 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:background="@drawable/button_design"
+            android:textColor="#121111"
             android:text="@string/apply" />
 
         <Button
@@ -251,6 +256,7 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:background="@drawable/button_design"
+            android:textColor="#121111"
             android:text="@string/reset" />
 
     </LinearLayout>
@@ -295,6 +301,7 @@
         android:layout_marginTop="12dp"
         android:layout_marginBottom="65dp"
         android:background="@drawable/button_design"
+        android:textColor="#121111"
         android:gravity="center"
         android:text="@string/Movements"
         app:layout_constraintBottom_toTopOf="@id/guideline"
