--- a/app/src/main/res/layout/activity_level2_page.xml
+++ b/app/src/main/res/layout/activity_level2_page.xml
@@ -119,6 +119,7 @@
                     android:layout_height="40dp"
                     android:background="@drawable/button_design"
                     android:text="@string/go_forward"
+                    android:textColor="#121111"
                     android:textSize="10sp" />
 
                 <Button
@@ -127,6 +128,7 @@
                     android:layout_height="40dp"
                     android:background="@drawable/button_design"
                     android:text="@string/turn_left"
+                    android:textColor="#121111"
                     android:textSize="10sp" />
 
                 <Button
@@ -135,6 +137,7 @@
                     android:layout_height="40dp"
                     android:background="@drawable/button_design"
                     android:text="@string/turn_right"
+                    android:textColor="#121111"
                     android:textSize="10sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -174,6 +177,7 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:background="@drawable/button_design"
+            android:textColor="#121111"
             android:text="@string/apply" />
 
         <Button
@@ -181,6 +185,7 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:background="@drawable/button_design"
+            android:textColor="#121111"
             android:text="@string/reset" />
 
     </LinearLayout>
@@ -227,6 +232,7 @@
         android:background="@drawable/button_design"
         android:gravity="center"
         android:text="@string/Movements"
+        android:textColor="#121111"
         app:layout_constraintBottom_toTopOf="@id/guideline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.436"
