--- a/app/src/main/res/layout/activity_level3_page.xml
+++ b/app/src/main/res/layout/activity_level3_page.xml
@@ -166,6 +166,7 @@
                     android:layout_height="40dp"
                     android:background="@drawable/button_design"
                     android:text="@string/go_forward"
+                    android:textColor="#121111"
                     android:textSize="10sp" />
 
                 <Button
@@ -174,6 +175,7 @@
                     android:layout_height="40dp"
                     android:background="@drawable/button_design"
                     android:text="@string/turn_left"
+                    android:textColor="#121111"
                     android:textSize="10sp" />
 
                 <Button
@@ -183,6 +185,7 @@
                     android:background="@drawable/button_design"
                     android:text="@string/turn_right"
                     android:textSize="10sp"
+                    android:textColor="#121111"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -192,6 +195,7 @@
                     android:layout_height="40dp"
                     android:background="@drawable/button_design"
                     android:text="@string/get_nectar"
+                    android:textColor="#121111"
                     android:textSize="10sp" />
 
             </LinearLayout>
@@ -235,6 +239,7 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:background="@drawable/button_design"
+            android:textColor="#121111"
             android:text="@string/apply" />
 
         <Button
@@ -242,6 +247,7 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:background="@drawable/button_design"
+            android:textColor="#121111"
             android:text="@string/reset" />
 
     </LinearLayout>
@@ -288,6 +294,7 @@
         android:background="@drawable/button_design"
         android:gravity="center"
         android:text="@string/Movements"
+        android:textColor="#121111"
         app:layout_constraintBottom_toTopOf="@id/guideline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.453"
