--- a/app/src/main/res/layout/activity_level8_page.xml
+++ b/app/src/main/res/layout/activity_level8_page.xml
@@ -118,6 +118,7 @@
                     android:layout_height="40dp"
                     android:background="@drawable/button_design"
                     android:text="@string/go_forward"
+                    android:textColor="#121111"
                     android:textSize="10sp" />
 
                 <Button
@@ -126,6 +127,7 @@
                     android:layout_height="40dp"
                     android:background="@drawable/button_design"
                     android:text="@string/turn_left"
+                    android:textColor="#121111"
                     android:textSize="10sp" />
 
                 <Button
@@ -134,6 +136,7 @@
                     android:layout_height="40dp"
                     android:background="@drawable/button_design"
                     android:text="@string/turn_right"
+                    android:textColor="#121111"
                     android:textSize="10sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -144,6 +147,7 @@
                     android:layout_height="40dp"
                     android:background="@drawable/button_design"
                     android:text="@string/get_key"
+                    android:textColor="#121111"
                     android:textSize="10sp" />
 
 
@@ -188,6 +192,7 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:background="@drawable/button_design"
+            android:textColor="#121111"
             android:text="@string/apply" />
 
         <Button
@@ -195,6 +200,7 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:background="@drawable/button_design"
+            android:textColor="#121111"
             android:text="@string/reset" />
 
 
@@ -240,6 +246,7 @@
         android:layout_marginTop="12dp"
         android:layout_marginBottom="65dp"
         android:background="@drawable/button_design"
+        android:textColor="#121111"
         android:gravity="center"
         android:text="@string/Movements"
         app:layout_constraintBottom_toTopOf="@id/guideline"
