--- a/app/src/main/res/layout/finishscreen.xml
+++ b/app/src/main/res/layout/finishscreen.xml
@@ -66,6 +66,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="20dp"
             android:layout_weight="1"
+            android:textColor="#121111"
             android:background="@drawable/button_design"
             android:text="@string/menu" />
 
@@ -74,6 +75,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textColor="#121111"
             android:layout_marginEnd="20dp"
             android:background="@drawable/button_design"
             android:text="@string/retry" />
@@ -83,6 +85,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textColor="#121111"
             android:background="@drawable/button_design"
             android:text="@string/continuebtn" />
     </LinearLayout>
