--- a/app/src/main/res/layout/tryagain.xml
+++ b/app/src/main/res/layout/tryagain.xml
@@ -38,6 +38,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="20dp"
             android:layout_weight="1"
+            android:textColor="#121111"
             android:background="@drawable/button_design"
             android:text="@string/menu" />
 
@@ -47,6 +48,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="20dp"
             android:layout_weight="1"
+            android:textColor="#121111"
             android:background="@drawable/button_design"
             android:text="@string/retry" />
 
